Closed Bug 1074286 Opened 10 years ago Closed 10 years ago

Fix Headers::Fill(const Headers&, ErrorResult&)

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: nsm, Assigned: nsm)

Details

Attachments

(1 file)

It should use Append instead of just copying the nsTArray so that the guard can be enforced.
We should add a test for this case as well.
Assignee: nobody → nsm.nikhil
Status: NEW → ASSIGNED
Comment on attachment 8496972 [details] [diff] [review]
Fix Headers::Fill(const Headers&, ErrorResult&)

I still think we can should add a test case for this in dom/tests/mochitest/fetch/test_headers_mainthread.js.  Those tests already manipulate the guard.
Attachment #8496972 - Flags: review?(bkelly) → review+
https://hg.mozilla.org/mozilla-central/rev/1c766099a83c
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: