Bug 1074286 - Fix Headers::Fill(const Headers&, ErrorResult&). r=bkelly